# evolutionary-teal-organization

./: .dependency-cruiser.js  .gitignore  CLAUDE.md  FORK-PLAN.md  LICENSE  Makefile  README.md  index.md  install.cmd  install.ps1  package.json  pi-bootstrap.cmd  reasonix.toml  tsconfig.json  uninstall.cmd  uninstall.ps1
.pi/: eto-sentinel.json  settings.json
.pi/extensions/: eto.js  eto.ts
bootstrap/: __init__.py  __main__.py  config_template.py  pyproject.toml  seed_profiles.py  seed_sample_skills.py  seed_sample_tasks.py
bootstrap/tests/: test_bootstrap.py
docs/: ETO缝合方案对照表.md  alternative-paradigms-to-eto.md  dead-ends.md  deli-autoresearch-vs-eto-analysis.md  design-spec.md  eto-ecosystem-tools.md  eto-feature-list.md  execution-plan.md  fable5-behavioral-routing.md  feature-sourcing.md  framework.md  handover-2026-06-25.md  implementation-roadmap.md  phase-1-core-loop.md  phase-2-governance.md  phase-3-routing.md  phase-4-evolution.md  phase-5-theory.md  positioning-and-strategy.md  preparation-guide.md  requirements.md  retrospective-and-roadmap.md  tealagent-pi-mapping.md
docs/test/: eto-empty-states.md
eto/: __init__.py  pyproject.toml
eto/bootstrap/: __init__.py  __main__.py  config_template.py  seed_profiles.py  seed_sample_skills.py
eto/eto.egg-info/: PKG-INFO  SOURCES.txt
eto/extensions/: eto.ts
eto/stitches/: README.md  (+5 more)
src/: __init__.py  agents.yaml  analyze.py  api_server.py  check_route.py  consensus.py  context.py  core.py  election.py  embedding.py  executor.py  router.py  skill.py  test_consensus.py  tools_web.py  tui.py  zhizi.py
(+24 files in other folders)
